# test_wf_doc

./: README.md  req.txt
aiida-aspherix/: README.md  pyproject.toml
aiida-aspherix/aiida_aspherix/: helpers.py  parsers.py
aiida-aspherix/aiida_aspherix/calculations/aspherix/: __init__.py  insertion.py  insertion_compression.py
aiida-aspherix/aiida_aspherix/common/: functions.py
aiida-aspherix/aiida_aspherix/data/: asx_parameters.py
aiida-aspherix/examples/: example_sphere.py
aiida-aspherix/examples/meshes/: top.stl  wall3.stl
aiida-cfdemcoupling/: README.md  pyproject.toml
aiida-cfdemcoupling/aiida_cfdem/: helpers.py  parsers.py
aiida-cfdemcoupling/aiida_cfdem/calculations/cfdem/: __init__.py  run.py
aiida-cfdemcoupling/aiida_cfdem/common/: cfdem_files.py  cfdem_functions.py  zero_files.py
aiida-cfdemcoupling/aiida_cfdem/data/: __init__.py  asx_parameters.py
aiida-cfdemcoupling/examples/: example_01.py  example_sphere.py
aiida-cfdemcoupling/examples/input_files/: restart.latest
aiida-cfdemcoupling/examples/meshes/: bottom.stl  top.stl  wall1.stl  wall2.stl  wall4.stl
aiida-fc-calibration/: README.md  pyproject.toml
aiida-fc-calibration/aiida_fc_calibration/: helpers.py  parsers.py
aiida-fc-calibration/aiida_fc_calibration/calculations/calibration/: __init__.py  porosity.py  resistivity.py  th_conductivity.py
aiida-fc-calibration/aiida_fc_calibration/common/: functions.py  mkfile.py  mkfile_macro.py
aiida-fc-calibration/aiida_fc_calibration/data/: __init__.py
aiida-fc-calibration/examples/: example_01.py  example_porosity.py  example_resistivity.py  example_th_conductivity.py  prop_macro.py  prop_micro.py
aiida-fc-calibration/examples/input_files/: fiber.stl  restart_macro.latest
aiida-fc-calibration/examples/meshes/: bottom.stl
aiida-wf-fuelCell/: pyproject.toml
aiida-wf-fuelCell/aiida_fc_workflows/: __init__.py  helpers.py  wf_cfdem.py
aiida-wf-fuelCell/example/: example.py  prop_macro.py
data_doc_aspherix/: aspherix_input.yml  pipeline_aspherix_out.yml  run_workflow.py  workflow_aspherix.template
data_doc_aspherix/entities/: AspherixInput.json
data_doc_fc_wf/: aspherix_input.yml  asx_data.yml  data_macro.template  data_macro.yaml  data_micro.yaml  pipeline_aspherix.template  pipeline_aspherix.yml  run_workflow.py  workflow_aspherix.template  workflow_aspherix.yaml
data_doc_fc_wf/entities/: AspherixInput.json  AspherixInput2.json  LAMMPSOutput.json
data_doc_fc_wf/output/: lammps_output.json
data_doc_fc_wf/storage_plugins/: write_input2.py
