[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'aiida-fc-workflows'
dynamic = ['description', 'version']
authors = [{name = 'The AiiDA team', email = 'developers@aiida.net'}]

classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: AiiDA',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords = ['aiida', 'workflows']
requires-python = '>=3.8'



[project.entry-points.'aiida.workflows']
'fc_workflows' = 'aiida_fc_workflows.wf_cfdem:InsertionAndComputation'

[tool.flit.module]
name = 'aiida_fc_workflows'